# ProGestion

./: .env.example  .gitignore  CHANGELOG.md  README.md  roadmap.md
.github/workflows/: build-desktop-tauri.yml  build-frontend-dist.yml  ci.yml  release-finalize.yml  release-oneclick.yml  release-prepare.yml  release.yml
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  models.py
backend/app/routes/: ai.py  auth.py  health.py  kanban.py  portfolio.py  projects.py  tasks.py
backend/migrations/versions/: 0e513266faf1_initial_schema.py  976ddde32720_init_schema.py
docker/: docker-compose.yml
docs/: MVP_DESKTOP.md  ROADMAP_DESKTOP.md  ROADMAP_TEMPLATE.md  VERSION_HISTORY.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/components/: ProtectedRoute.tsx
frontend/src/lib/: auth.ts
frontend/src/lib/platform/: desktop.ts  index.ts  web.ts
frontend/src/pages/: App.tsx  Dashboard.tsx  Ideation.tsx  OAuthCallback.tsx  PublicPortfolio.tsx
k8s/: backend-deployment.yaml  backend-secret.yaml  frontend-deployment.yaml  ingress.yaml  openai-secret.example.yaml  postgres-networkpolicy.yaml  postgres-statefulset.yaml
scripts/: release.sh  serve-dist.ps1  setup-node-portable.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
