[package]
name = "progestion"
version = "0.2.0"
description = "ProGestion Desktop"
authors = ["ProGestion"]
license = "MIT"
repository = "https://github.com/Vanti7/ProGestion"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["shell-open"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "s"
lto = true

